--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cohere-ai": "^5.0.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
+    "framer-motion": "^9.0.1",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
